1997-06-10  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/chrcount.c:
	fix so we don't pick up non-files with the "-m" option

	* src/unmap/chrcount.c: RCS_BASE

1997-06-09  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/Makefile: dependencies

	* src/unmap/unmap.h: chrcount stuff

	* src/unmap/run_test.sh: cleanup

	* src/unmap/unmap_s.c: escape backslashes

	* src/unmap/run_test.sh, src/unmap/map_s.c: RCS_BASE

	* src/unmap/Makefile: add 'check' rule

	* src/unmap/unmap_s.c: change name of ESC to BACKSLASH.

	* src/unmap/unmap.h: names ESCAPE, BACKSLASH

	* src/unmap/map.c, src/unmap/unmap_s.c, src/unmap/Makefile: RCS_BASE

	* src/unmap/unmap.c: split-out common function as unmap_s()

	* src/unmap/unmap.h: RCS_BASE

1997-05-10  dickey@clark.net

	* src/width/width.c:
	allocate the line-buffer dynamically so I can display a long line

1997-04-05  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/unmap.c: force trailing newline to make comparison simpler

1997-03-12  dickey@clark.net

	* src/newpath/getopt.c, src/newpath/getopt.h: RCS_BASE

1997-01-13  Thomas E. Dickey  <dickey@clark.net>

	* src/slowcat/slowcat.c: RCS_BASE

1996-11-22  dickey@clark.net

	* src/width/width.1: add "-p" and "-" interpretation

	* src/width/width.c:
	add "-p" option and process "-" as a list of files from standard-input

	* src/width/width.1: RCS_BASE

1996-11-21  dickey@clark.net

	* src/width/width.c: show current width, not maximum

	* src/width/width.c: always show the result

	* src/width/width.c, src/width/Makefile: RCS_BASE

1996-08-14  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/unmap.c: print characters above 128 as octal

1996-07-04  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/unmap.c: used the wrong base for ^x

1996-03-04  Thomas E. Dickey  <dickey@clark.net>

	* src/hex/hex.c: quick hack to show ECMA codes

1995-12-15  Thomas E. Dickey  <dickey@clark.net>

	* src/unmap/unmap.c: RCS_BASE

1995-02-20  Thomas E. Dickey  <dickey@clark.net>
